# seedsyncarr

./: .gitignore  .gitleaks.toml  404.html  ACKNOWLEDGMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  index.html  package-lock.json  package.json  release-notes.md  sitemap.xml
faq/: index.html
src/python/: mkdocs.yml  pyproject.toml  scan_fs.py  seedsyncarr.py
src/python/common/: __init__.py  app_process.py  bounded_ordered_set.py  config.py  constants.py  context.py  encryption.py  error.py  job.py  localization.py  multiprocessing_logger.py  persist.py  status.py  types.py
src/python/controller/: __init__.py  auto_delete_manager.py  auto_queue.py  command_processor.py  controller.py  controller_job.py  controller_persist.py  file_operation_manager.py  lftp_manager.py  memory_monitor.py  model_builder.py  model_pipeline.py  scan_manager.py  webhook_manager.py
src/python/controller/delete/: __init__.py  delete_process.py
src/python/controller/extract/: __init__.py  dispatch.py  extract.py  extract_process.py
src/python/controller/scan/: __init__.py  active_scanner.py  local_scanner.py  remote_scanner.py  scanner_process.py
src/python/docs/: arr-setup.md  changelog.md  configuration.md  coverage-gaps.md  faq.md  index.md  install.md  name-mangling-tradeoff.md
src/python/lftp/: __init__.py  job_status.py  job_status_parser.py  lftp.py
src/python/model/: __init__.py  diff.py  file.py  model.py
src/python/ssh/: __init__.py  sshcp.py
src/python/system/: __init__.py  file.py  scanner.py
src/python/tests/: conftest.py  helpers.py  utils.py
src/python/tests/helpers/: wsgi_stream.py
src/python/tests/integration/test_controller/: test_controller.py
src/python/tests/integration/test_controller/test_extract/: test_extract.py
src/python/tests/integration/test_lftp/: test_lftp.py  test_lftp_protocol.py
src/python/tests/integration/test_web/: test_web_app.py
src/python/tests/integration/test_web/test_handler/: test_auto_queue.py  test_config.py  test_controller.py  test_server.py  test_status.py  test_stream_log.py  test_stream_model.py  test_stream_status.py  test_webhook.py
src/python/tests/unittests/: test_seedsyncarr.py
src/python/tests/unittests/test_common/: test_app_process.py  test_bounded_ordered_set.py  test_config.py  test_constants.py  test_context.py  test_encryption.py  test_error.py  test_job.py  test_localization.py  test_multiprocessing_logger.py  test_persist.py  test_status.py  test_types.py
src/python/tests/unittests/test_controller/: base.py  test_auto_delete.py  test_auto_queue.py  test_controller.py  test_controller_job.py  test_controller_persist.py  test_controller_unit.py  test_delete_process.py  test_file_operation_manager.py  test_lftp_manager.py  test_memory_monitor.py  test_model_builder.py  test_scan_manager.py  test_webhook_manager.py
src/python/tests/unittests/test_controller/test_extract/: test_dispatch.py  test_extract_process.py
src/python/tests/unittests/test_controller/test_scan/: test_active_scanner.py  test_local_scanner.py  test_remote_scanner.py  test_scanner_process.py
src/python/tests/unittests/test_lftp/: test_job_status.py  test_job_status_parser.py  test_job_status_parser_components.py  test_lftp.py  test_lftp_log_sanitization.py
src/python/tests/unittests/test_model/: test_diff.py  test_file.py  test_model.py
src/python/tests/unittests/test_ssh/: test_sshcp.py
src/python/tests/unittests/test_system/: test_file.py  test_scanner.py
src/python/tests/unittests/test_web/: test_auth.py  test_rate_limit.py  test_stream_queue.py  test_web_app.py  test_webhook_handler.py
src/python/tests/unittests/test_web/test_handler/: __init__.py  test_auto_queue_handler.py  test_config_handler.py  test_controller_handler.py  test_server_handler.py  test_status_handler.py  test_stream_heartbeat.py  test_stream_log.py  test_stream_model_handler.py  test_stream_status_handler.py
src/python/web/: __init__.py  rate_limit.py  utils.py  web_app.py  web_app_builder.py  web_app_job.py
src/python/web/handler/: auto_queue.py  config.py  controller.py  server.py  status.py  stream_heartbeat.py  stream_log.py  stream_model.py  stream_status.py  webhook.py
src/python/web/serialize/: __init__.py  serialize.py  serialize_auto_queue.py  serialize_config.py  serialize_log_record.py  serialize_model.py  serialize_status.py
(+1148 files in other folders)
