[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seedsyncarr"
version = "1.0.0"
description = "Fast file syncing from remote servers with a web UI, powered by LFTP"
authors = [{name = "thejuran"}]
requires-python = ">=3.11,<3.13"
dependencies = [
    "bottle>=0.13.4",
    "paste>=3.10.1",
    "patool>=4.0.3",
    "pexpect>=4.9.0",
    "pytz>=2025.2",
    "requests>=2.33.0",
    "tblib>=3.2.2",
    "timeout-decorator>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "testfixtures>=10.0.0",
    "webtest>=3.0.7",
    "pytest>=7.4.4",
    "pytest-timeout>=2.3.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.4.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "parameterized>=0.9.0",
]

[project.scripts]
seedsyncarr = "seedsyncarr:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.poetry]
name = "seedsyncarr"
version = "1.0.0"
description = "Fast file syncing from remote servers with a web UI, powered by LFTP"
authors = ["thejuran"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
bottle = "^0.13.4"
paste = "^3.10.1"
patool = "^4.0.3"
pexpect = "^4.9.0"
pytz = "^2025.2"
requests = "^2.33.0"
tblib = "^3.2.2"
timeout-decorator = "^0.5.0"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.1"
parameterized = "^0.9.0"
pyinstaller = "^6.0.0"
testfixtures = "^10.0.0"
webtest = "^3.0.7"
pytest = "^7.4.4"
pytest-timeout = "^2.3.1"
pytest-cov = "^7.1.0"

[tool.pytest.ini_options]
pythonpath = ["."]
timeout = 60
cache_dir = "/tmp/.pytest_cache"
filterwarnings = [
    "ignore:'cgi' is deprecated:DeprecationWarning",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "docs/*",
]
branch = true

[tool.coverage.report]
fail_under = 84
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "pass",
]

[tool.coverage.html]
directory = "htmlcov"
